// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<a
  className=""
  href="/"
>
  Button
</a>
`;

exports[`Button renders correctly with custom class name 1`] = `
<a
  className="custom-class-name"
  href="/"
>
  Button
</a>
`;

exports[`Button renders correctly with external link 1`] = `
<a
  className=""
  href="https://example.com"
>
  Button
</a>
`;
